--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 volumes/etcd/
-volumes/milvus/wal/
+volumes/milvus/*/LOG.*
+volumes/minio
+
